docs/content/gloo_routing/virtual_services/routes/matching_rules/http_method_matching/test-post-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: test-post
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'foo'
    routes:
      - matcher:
          methods:
            - POST
          prefix: /
        routeAction:
          single:
            upstream:
              name: json-upstream
              namespace: gloo-system
